--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-# Copyright (c) 2008-2010 Luis Rei <luis.rei@gmail.com> http://luisrei.com
+# Copyright (c) 2008-2012 Luis Rei <me@luisrei.com> http://luisrei.com
 # 
 # Permission is hereby granted, free of charge, to any person obtaining a copy
 # of this software and associated documentation files (the "Software"), to deal
